working encounter get and post {idAdventure} optimalizations